# frappe_pulse

./: .gitignore  README.md  README.ru.md  pyproject.toml
docs/: ARCHITECTURE.md  EXTERNAL_CLIENT.md  SETUP_AND_USAGE.md  install-pulse-app.md  platform-architecture.md
presence_ws/: Dockerfile  README.md  cli.js  docker-compose.yml  frappe-verify.js  health.js  package-lock.json  package.json  prometheus-metrics.js  redis-presence.js  server.js
presence_ws/deploy/: Caddyfile.example  HOSTING.md  bootstrap-host.sh  docker-compose.override.caddy.yml  env.example  install-nginx-wss-devapp.sh  nginx-location-_presence.conf
pulse_app/: hooks.py
pulse_app/api/: presence.py
pulse_app/core/router/: __init__.py  pulse_router.py  router.py
pulse_app/http/: request_helpers.py
pulse_app/http/routes/: __init__.py  presence.py  sample.py
pulse_app/public/css/: pulse_online_page.css
pulse_app/public/js/: pulse_online_page.js  pulse_socket.js  pulse_user_list.js  user_pulse.js
pulse_app/pulse/: auth_hooks.py  boot_session.py  dashboard_access.py  install.py
pulse_app/pulse/doctype/pulse_session_event/: pulse_session_event.json  pulse_session_event.py
pulse_app/pulse/doctype/pulse_user_profile/: pulse_user_profile.json  pulse_user_profile.py
pulse_app/pulse/modules/: __init__.py
pulse_app/pulse/modules/presence/: __init__.py  controller.py
pulse_app/pulse/modules/sample/: controller.py  service.py
pulse_app/pulse/setup/: workspace_sidebar.py
pulse_app/pulse/workspace/pulse/: pulse.json
pulse_app/realtime/: handlers.js
pulse_app/utils/: api_routes.py
(+6 files in other folders)
