[project]
name = "pulse_app"
authors = [{ name = "Pulse", email = "pulse@example.com" }]
description = "User presence, session history, and Pulse extensions for Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["E501", "W191", "E101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
